(feat): Add EXPAND_VOLUME capability (#5)
* Do suite test properly

* Set build tag

* Low-level resize operation

* Actually use constants.ZeroUUID

* Rename var

* Log to stdout so powershell doesn't complain about stderr text

* Add ExpandVolume to API routes

* Linter fixes

* Volume expansion support

* Linter fixes

* Print large numbers with 1000 separators

* Add logging and improve apiCall signature

* configurable log level

* everything else

* Create/Expand - move size parameter to path

* Use ternary package

* Update README

* Bump version
