# internal/models/rest/expand_volume.go
@@ -1,0 +1,8 @@
+package rest
+
+type ExpandVolumeResponse struct {
+
+	CapacityBytes int64
+	NodeExpansionRequired bool
+}
+
