# internal/windows/swaggerui/swagger.json
@@ -5,7 +5,7 @@
     },
     "paths": {
         "/attachment/{nodeid}/volume/{volid}": {
-            "post": {
+            "put": {
                 "description": "Attaches a volume to a node",
                 "consumes": [
                     "application/json"
@@ -41,8 +41,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "403": {
                         "description": "Access denied",
@@ -94,8 +94,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "403": {
                         "description": "Access denied",
@@ -298,8 +298,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Invalid arguments",
@@ -309,6 +309,82 @@
                     },
                     "403": {
                         "description": "Access denied",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/volume/{id}/size/{size}": {
+            "put": {
+                "description": "Expand a VHD",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Disks"
+                ],
+                "summary": "Expand a VHD",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API Key",
+                        "name": "X-Api-Key",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Volume size",
+                        "name": "size",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Volume id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ExpandVolumeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid arguments",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Error"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/rest.Error"
                         }
@@ -352,8 +428,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/rest.GetVolumeResponse"
                         }
@@ -389,7 +465,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/volume/{name}/size/{size}": {
             "post": {
                 "description": "Create a new VHD",
                 "consumes": [
@@ -414,7 +492,7 @@
                         "type": "integer",
                         "description": "Volume size",
                         "name": "size",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -558,6 +636,17 @@
                 "message": {
                     "description": "Error message",
                     "type": "string"
+                }
+            }
+        },
+        "rest.ExpandVolumeResponse": {
+            "type": "object",
+            "properties": {
+                "capacityBytes": {
+                    "type": "integer"
+                },
+                "nodeExpansionRequired": {
+                    "type": "boolean"
                 }
             }
         },
